# timekeeper

./: .gitignore  .grumpy-janitor-issues.md  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  README.md  RELEASE-NOTES.md  justfile  release.sh  sample-import.csv
.github/: dependabot.yml
.github/workflows/: release.yml  rust.yml
tmkpr-cli/: Cargo.toml  README.md
tmkpr-cli/src/: cli.rs  completers.rs  error.rs  main.rs  output.rs  prompt.rs
tmkpr-cli/src/commands/: comment.rs  completion.rs  config.rs  delete.rs  edit.rs  event.rs  export.rs  fill_gap.rs  import.rs  list.rs  log.rs  merge.rs  mod.rs  project.rs  report.rs  status.rs  stop.rs  tag.rs  task.rs  track.rs
tmkpr-lib/: Cargo.toml  README.md
tmkpr-lib/src/: config.rs  error.rs  lib.rs  obsidian_logger.rs  ui_state.rs  util.rs
tmkpr-lib/src/models/: comment.rs  entry.rs  mod.rs  project.rs  task.rs  user.rs
tmkpr-lib/src/nlp/: mod.rs  parser.rs
tmkpr-lib/src/service/: comment_service.rs  entry_service.rs  mod.rs  project_service.rs  task_service.rs
tmkpr-lib/src/storage/: mod.rs
tmkpr-lib/src/storage/sqlite/: migrations.rs  mod.rs
tmkpr-pomodoro/: Cargo.toml  README.md
tmkpr-pomodoro/src/: app.rs  main.rs  theme.rs  ui.rs
tmkpr-ui/: Cargo.toml  README.md  build.rs
tmkpr-ui/src/: app.rs  color.rs  form.rs  input.rs  main.rs  theme.rs  ui.rs
