[workspace]
resolver = "2"
members = ["tmkpr-lib", "tmkpr-cli", "tmkpr-ui", "tmkpr-pomodoro"]

[workspace.package]
version = "1.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
chrono       = { version = "0.4", features = ["serde"] }
uuid         = { version = "1", features = ["v4", "serde"] }
anyhow       = "1"
thiserror    = "2"
toml         = "1.1"
dirs         = "6"
rusqlite     = { version = "0.39", features = ["bundled", "chrono"] }
clap         = { version = "4", features = ["derive", "env"] }
clap_complete = { version = "4", features = ["unstable-dynamic"] }
comfy-table  = "7"
crossterm    = "0.28"
colored      = "3"
interim      = { version = "0.2", features = ["chrono_0_4"] }
ratatui      = "0.29"
notify-rust  = "4"
tmkpr-lib    = { path = "tmkpr-lib" }
