[workspace]
resolver = "2"
members = ["tmkpr-lib", "tmkpr-cli", "tmkpr-ui", "tmkpr-pomodoro"]

[workspace.package]
version = "1.3.0"
edition = "2021"
license = "MIT"
authors = ["Leif Jantzen"]
repository = "https://github.com/ljantzen/timekeeper"
keywords = ["time-tracking", "productivity", "tui", "pomodoro", "cli"]

[workspace.dependencies]
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
chrono       = { version = "0.4", features = ["serde"] }
uuid         = { version = "1", features = ["v4", "serde"] }
anyhow       = "1"
thiserror    = "2"
toml         = "1.1"
dirs         = "6"
rusqlite     = { version = "0.40", features = ["bundled", "chrono"] }
clap         = { version = "4", features = ["derive", "env"] }
clap_complete = { version = "4", features = ["unstable-dynamic"] }
comfy-table  = "7"
crossterm    = "0.29"
colored      = "3"
interim      = { version = "0.2", features = ["chrono_0_4"] }
ratatui      = "0.30"
notify-rust  = "4"
rodio        = { version = "0.22", features = ["symphonia-all"] }
csv          = "1"
tmkpr-lib    = { path = "tmkpr-lib", version = "1.3.0" }
obsidian-logging = "1.3.5"
