[package]
name        = "tmkpr-cli"
description = "CLI for tmkpr time tracking"
version.workspace    = true
edition.workspace    = true
license.workspace    = true

[[bin]]
name = "tmkpr"
path = "src/main.rs"

[dev-dependencies]
tempfile = "3"

[dependencies]
tmkpr-lib    = { workspace = true }
csv          = { workspace = true }
clap         = { workspace = true }
clap_complete = { workspace = true }
comfy-table  = { workspace = true }
crossterm    = { workspace = true }
colored      = { workspace = true }
chrono       = { workspace = true }
serde_json   = { workspace = true }
anyhow       = { workspace = true }
thiserror    = { workspace = true }
serde        = { workspace = true }
