[package]
name        = "tmkpr-lib"
description = "Core library for tmkpr time tracking"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
authors.workspace    = true
repository.workspace = true
keywords.workspace   = true
readme = "README.md"

[dependencies]
serde      = { workspace = true }
serde_json = { workspace = true }
chrono     = { workspace = true }
uuid       = { workspace = true }
anyhow     = { workspace = true }
thiserror  = { workspace = true }
toml       = { workspace = true }
dirs       = { workspace = true }
rusqlite   = { workspace = true }
interim    = { workspace = true }
obsidian-logging = { workspace = true }

[dev-dependencies]
tempfile = "3"
