[package]
name = "tmkpr-pomodoro"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
chrono.workspace = true
crossterm.workspace = true
ratatui.workspace = true
serde.workspace = true
tmkpr-lib.workspace = true
notify-rust.workspace = true
rodio.workspace = true

[dev-dependencies]
