[package]
name = "tmkpr-pomodoro"
description = "Pomodoro timer for tmkpr time tracking"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
readme = "README.md"

[dependencies]
anyhow.workspace = true
clap.workspace = true
chrono.workspace = true
crossterm.workspace = true
ratatui.workspace = true
serde.workspace = true
tmkpr-lib.workspace = true
notify-rust.workspace = true
rodio.workspace = true

[dev-dependencies]
