[package]
name        = "tmkpr-ui"
description = "Terminal UI for tmkpr time tracking"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
authors.workspace    = true
repository.workspace = true
keywords.workspace   = true
readme = "README.md"

[[bin]]
name = "tmkpr-ui"
path = "src/main.rs"

[dependencies]
tmkpr-lib = { workspace = true }
ratatui   = { workspace = true }
crossterm = { workspace = true }
chrono    = { workspace = true }
anyhow    = { workspace = true }
clap             = { workspace = true }
csscolorparser   = "0.8"
